[gd_scene load_steps=2 format=3 uid="uid://ddgl4s8c17ck1"]

[ext_resource type="Script" path="res://Scripts/number_tag_tool.gd" id="1_6kme2"]

[node name="NumerTag" type="Control"]
custom_minimum_size = Vector2(448, 64)
layout_mode = 3
anchor_right = 0.35
anchor_bottom = 0.0888889
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6kme2")
metadata/_edit_use_anchors_ = true

[node name="EdgeRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.462745, 0.541176, 1)

[node name="BGRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
color = Color(0.211765, 0.239216, 0.290196, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="SpinBox" type="SpinBox" parent="HBoxContainer"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
value = 1.0
alignment = 1
select_all_on_focus = true

[node name="NumerTag" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "something"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AcceptButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Accept"

[node name="CancelButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Cancel"
